--- a/.github/workflows/openwrt-armv8.yml
+++ b/.github/workflows/openwrt-armv8.yml
@@ -170,8 +170,8 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt_ARMv8 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: OpenWrt_ARMv8${{ env.FILE_NAME }}
+        name: OpenWrt ARMv8 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
