--- a/.github/workflows/openwrt-test.yml
+++ b/.github/workflows/openwrt-test.yml
@@ -174,8 +174,8 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt_Selfuse ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: OpenWrt_Selfuse${{ env.FILE_NAME }}
+        name: OpenWrt Test ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
