--- a/.github/workflows/openwrt-x86.yml
+++ b/.github/workflows/openwrt-x86.yml
@@ -152,8 +152,8 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: OpenWrt_x86 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: OpenWrt_x86${{ env.FILE_NAME }}
+        name: OpenWrt x86 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
+        tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
         removeArtifacts: true
