--- a/.github/workflows/openwrt-x86.yml
+++ b/.github/workflows/openwrt-x86.yml
@@ -112,7 +112,6 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "TAG_DATE=$(date +"%Y-%m-%d")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
@@ -153,7 +152,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: OpenWrt x86 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: ${{ env.TAG_DATE }}
+        tag: x86
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
         removeArtifacts: true
