--- a/.github/workflows/openwrt-armv8.yml
+++ b/.github/workflows/openwrt-armv8.yml
@@ -112,6 +112,7 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        echo "TAG_DATE=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
@@ -155,13 +156,14 @@ jobs:
         KERNEL_REPO_URL: https://github.com/yunxi993/OpenWrt-ARMv8/tree/main/kernel
         PACKAGE_SOC: vplus_beikeyun_l1pro_r66s_r68s_s905_s905d_s905x2_s905x3_s912_s922x_s922x-n2
         KERNEL_AUTO_LATEST:  true
-        KERNEL_VERSION_NAME: 5.15.67_5.19.8_6.0.2
+        KERNEL_VERSION_NAME: 5.15.67_6.0.2
         WHOAMI: Sil
 
     - name: copy update files
       run: |
         cd /opt/openwrt_packit
         cp ./files/update*.sh ./output/
+        rm -rf $(find ./output/ -name "sha256sums")
         cd $GITHUB_WORKSPACE/openwrt/bin
         cp IPK.tar.gz /opt/openwrt_packit/output/
         echo "::set-output name=status::success"
@@ -170,7 +172,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: OpenWrt ARMv8 ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: ARMv8
+        tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
