--- a/.github/workflows/openwrt-test.yml
+++ b/.github/workflows/openwrt-test.yml
@@ -111,6 +111,7 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        echo "TAG_DATE=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
@@ -158,7 +159,7 @@ jobs:
         WHOAMI: Yuan
         ENABLE_WIFI_K504: 0
         ENABLE_WIFI_K510: 0
-        SW_FLOWOFFLOAD: 0
+        SW_FLOWOFFLOAD: 1
         HW_FLOWOFFLOAD: 0
         SFE_FLOW: 0
 
@@ -166,6 +167,7 @@ jobs:
       run: |
         cd /opt/openwrt_packit
         cp ./files/update*.sh ./output/
+        rm -rf $(find ./output/ -name "sha256sums")
         cd $GITHUB_WORKSPACE/openwrt/bin
         cp IPK.tar.gz /opt/openwrt_packit/output/
         echo "::set-output name=status::success"
@@ -174,7 +176,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: OpenWrt Test ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: Test
+        tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
