--- a/.github/workflows/openwrt-x86-docker.yml
+++ b/.github/workflows/openwrt-x86-docker.yml
@@ -112,6 +112,7 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y-%m-%d %H%M")" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        echo "TAG_DATE=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
@@ -152,7 +153,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: OpenWrt x86 Docker ${{ env.PRODUCT_NAME }}${{ env.DATE }}
-        tag: x86-Docker
+        tag: ${{ env.TAG_DATE }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
         removeArtifacts: true
