--- a/.github/workflows/openwrt-test.yml
+++ b/.github/workflows/openwrt-test.yml
@@ -208,6 +208,6 @@ jobs:
       run: |
         MSG="
         编译时间：${{ env.DATE }}
-        Selfuse 编译完成
+        Test 编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
